// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Center Text 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-cKZHah fcLNoO sc-iIEYCM hCNsVr"
  >
    <h3
      className="sc-jcVebW fraIRR sc-bZSQDF jZIzQR"
    >
      I am in a container
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Container Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-cKZHah laTkLd sc-iIEYCM hCNsVr"
  >
    <h3
      className="sc-jcVebW fraIRR sc-bZSQDF jZIzQR"
    >
      I am in a container
    </h3>
  </div>
</div>
`;
